# orgstats

./: .gitignore  .org-cli.json  AGENTS.md  README.md  VIBES.md  VIBES.org  opencode.json  pyproject.toml  requirements.txt
examples/: ARCHIVE_small
src/: cli.py  core.py  main.py
src/org/: cli.py
src/orgstats/: __init__.py  analyze.py  cli.py  color.py  core.py  filters.py  histogram.py  plot.py  timestamp.py
tests/: conftest.py  test_analysis_result.py  test_analyze.py  test_analyze_multiple_done_keys.py  test_chart_date_spanning.py  test_clean.py  test_cli.py  test_cli_argparse.py  test_cli_buckets.py  test_cli_color.py  test_cli_config.py  test_cli_direct.py  test_cli_file_errors.py  test_cli_filter_construction.py  test_cli_mapping.py  test_cli_max_groups.py  test_cli_max_tags.py  test_cli_new_filters.py  test_cli_regex_filters.py  test_cli_relations.py  test_cli_stats_groups.py  test_cli_stats_tags.py  test_cli_validation_errors.py  test_combine_time_ranges.py  test_compute_category_histogram.py  test_compute_day_of_week_histogram.py  test_compute_frequencies.py  test_compute_global_timerange.py  test_compute_groups.py  test_compute_helpers.py  test_compute_relations.py  test_compute_task_state_histogram.py  test_compute_task_stats.py  test_compute_time_ranges.py  test_extract_timestamp.py  test_filter_category.py  test_filter_chain.py  test_filter_functions.py  test_filter_nodes.py  test_filtered_org_node.py  (+22 more)
tests/fixtures/: custom_mapping.json  exclude_list_body.txt  exclude_list_heading.txt  exclude_list_tags.txt  tags_category_test.org
